fixed cart on smaller screen sizes

--- a/styles/Cart.module.scss
+++ b/styles/Cart.module.scss
@@ -137,6 +137,7 @@
       .itemsAndCheckout {
         .itemsContainer {
           .cartItem {
+            flex-direction:column;
             img {
               width: 100px;
               height: 100px;
@@ -144,12 +145,20 @@
             .details {
               flex-direction: column-reverse;
               align-items: center;
-              .info {
-              }
+              padding:10px !important;
+              gap:0.5rem;
               span {
                 align-self: flex-end;
               }
+              .info{
+                display:flex;
+                flex-direction:column;
+                gap:1rem;
+              }
             }
+          }
+          .subTotal{
+            display:none;
           }
         }
       }
@@ -162,7 +171,7 @@
         .itemsContainer {
           .cartItem {
             img {
-              display: none;
+              // display: none;
             }
           }
         }
